--- a/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
@@ -85,6 +85,16 @@
     <FlyoutItem Title="Browse" Icon="icon_feed.png">
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
     </FlyoutItem>
+    <!--Kept the above two menu items ^^^ Although, only the below ones matter. vvv-->
+    <FlyoutItem Title="Main" Icon="icon_feed.png">
+        <ShellContent Route="MainPage" ContentTemplate="{DataTemplate local:MainPage}" />
+    </FlyoutItem>
+    <FlyoutItem Title="Swim Classes" Icon="icon_feed.png">
+        <ShellContent Route="SwimClassesPage" ContentTemplate="{DataTemplate local:SwimClassesPage}" />
+    </FlyoutItem>
+    <FlyoutItem Title="Students" Icon="icon_feed.png">
+        <ShellContent Route="StudentsPage" ContentTemplate="{DataTemplate local:StudentsPage}" />
+    </FlyoutItem>
 
     <!-- When the Flyout is visible this will be a menu item you can tie a click behavior to  -->
     <MenuItem Text="Logout" StyleClass="MenuItemLayoutStyle" Clicked="OnMenuItemClicked">
