--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
@@ -2,11 +2,16 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Swimclub.Mobile.Views.StudentsPage">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Register Student" />
+    </ContentPage.ToolbarItems>
     <ContentPage.Content>
         <StackLayout>
-            <Label Text="This is the Students Page!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
+            <Label Text="Students" FontSize="Title"/>
+            <Label Text="Student Name:" FontSize="Medium" />
+            <Label Text="{Binding studentName}" FontSize="Small"/>
+            <Label Text="{Binding studentID}" FontSize="Small"/>
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
