--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
@@ -6,7 +6,7 @@
         <StackLayout>
             <SearchBar x:Name="StudentSearchBar" Placeholder="Search" CancelButtonColor="Red" 
                        HorizontalTextAlignment="Center" TextChanged="StudentPageSearchBar_TextChanged"></SearchBar>
-            <CollectionView x:Name="Coll1" ItemsSource="{Binding Ilist}">
+            <CollectionView x:Name="Coll1" ItemsSource="{Binding Ilist}" >
             <CollectionView.ItemTemplate>
                 <DataTemplate>
                     <Grid Padding="10" Margin="10">
@@ -17,14 +17,16 @@
                             <RowDefinition Height="1*"></RowDefinition>
                         </Grid.RowDefinitions>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="50*"></ColumnDefinition>
-                            <ColumnDefinition Width="50*"></ColumnDefinition>
+                            <ColumnDefinition Width="20*"></ColumnDefinition>
+                            <ColumnDefinition Width="20*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
                         <Label Text="{Binding StudentName}" FontSize="16" Grid.Row="0" Grid.ColumnSpan="2"></Label>
                         <Label Text="{Binding StudentGrade}" Grid.Row="1" Grid.ColumnSpan="2"></Label>
                         <Label Text="{Binding StudentSwimEnglandNumber}" Grid.Row="2" Grid.ColumnSpan="2"></Label>
                         
-                        <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="4" 
+                        <Image x:Name="imgGreyPlus" Source="greyPlus.png" Grid.Column="2" Grid.Row="2"></Image> <!--TODO MAKE IMAGE APPEAR ON RIGHT-->
+                        
+                            <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="4" 
                                  VerticalOptions="Center" HeightRequest="3" BackgroundColor="DarkGray"></BoxView>
                     </Grid>
                 </DataTemplate>
