--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
@@ -20,12 +20,12 @@
                             <ColumnDefinition Width="1*"></ColumnDefinition>
                             <ColumnDefinition Width="1*"></ColumnDefinition>
                         </Grid.ColumnDefinitions>
-                        <Label Text="{Binding StudentName}" FontSize="16" Grid.Row="0" Grid.ColumnSpan="2"></Label>
-                        <Label Text="{Binding StudentGrade}" Grid.Row="1" Grid.ColumnSpan="2"></Label>
-                        <Label Text="{Binding StudentSwimEnglandNumber}" Grid.Row="2" Grid.ColumnSpan="2"></Label>
-                        
+                        <Label Text="{Binding StudentName}" FontSize="16" Grid.Row="0" Grid.ColumnSpan="2"/>
+                        <Label Text="{Binding StudentGrade}" Grid.Row="1" Grid.ColumnSpan="2"/>
+                        <Label Text="{Binding StudentSwimEnglandNumber}" Grid.Row="2" Grid.Column="0"/>
+                        <Button x:Name="TestingButton" Clicked="TestingButton_Clicked" Grid.Row="2" Grid.Column="1" Text="GRADING TESTING BUTTON" HorizontalOptions="CenterAndExpand" BackgroundColor="Gray"/>
                         <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="4" 
-                                 VerticalOptions="Center" HeightRequest="3" BackgroundColor="DarkGray"></BoxView>
+                            VerticalOptions="Center" HeightRequest="3" BackgroundColor="DarkGray"></BoxView>
                     </Grid>
                 </DataTemplate>
             </CollectionView.ItemTemplate>
