--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
@@ -23,7 +23,7 @@
                         <Label Text="{Binding StudentName}" FontSize="16" Grid.Row="0" Grid.ColumnSpan="2"/>
                         <Label Text="{Binding StudentGrade}" Grid.Row="1" Grid.ColumnSpan="2"/>
                         <Label Text="{Binding StudentSwimEnglandNumber}" Grid.Row="2" Grid.Column="0"/>
-                        <Button x:Name="TestingButton" Clicked="TestingButton_Clicked" Grid.Row="2" Grid.Column="1" Text="GRADING TESTING BUTTON" HorizontalOptions="CenterAndExpand" BackgroundColor="Gray"/>
+                        <Button x:Name="TestingButton" Clicked="TestingButton_Clicked" Grid.Row="2" Grid.Column="1" Text="Test Scores" HorizontalOptions="CenterAndExpand" BackgroundColor="Gray"/>
                         <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="4" 
                             VerticalOptions="Center" HeightRequest="3" BackgroundColor="DarkGray"></BoxView>
                     </Grid>
