Did a big commit here. I've changed the student list page to now go and fetch whats on the server. and it works
For this to work, you need to run the server in the Swimclub.REST config, if you build it then it will be in the bin/debug/net5/swimclub.rest.exe

BUT before you do that, find out your IP, and replace my ip that is in the launchSettings.json, as the emulator will connect through your PC IP.

Also you need to change the IP in the IRestService

--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
@@ -5,31 +5,39 @@
     <ContentPage.Content>
         <StackLayout>
             <SearchBar x:Name="StudentSearchBar" Placeholder="Search" CancelButtonColor="Red" 
-                       HorizontalTextAlignment="Center" TextChanged="StudentPageSearchBar_TextChanged"></SearchBar>
-            <CollectionView x:Name="Coll1" ItemsSource="{Binding Ilist}">
-            <CollectionView.ItemTemplate>
-                <DataTemplate>
-                    <Grid Padding="10" Margin="10">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="1*"></RowDefinition>
-                            <RowDefinition Height="1*"></RowDefinition>
-                            <RowDefinition Height="1*"></RowDefinition>
-                            <RowDefinition Height="1*"></RowDefinition>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1*"></ColumnDefinition>
-                            <ColumnDefinition Width="1*"></ColumnDefinition>
-                        </Grid.ColumnDefinitions>
-                        <Label Text="{Binding StudentName}" FontSize="16" Grid.Row="0" Grid.ColumnSpan="2"></Label>
-                        <Label Text="{Binding StudentGrade}" Grid.Row="1" Grid.ColumnSpan="2"></Label>
-                        <Label Text="{Binding StudentSwimEnglandNumber}" Grid.Row="2" Grid.ColumnSpan="2"></Label>
-                        
-                        <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="4" 
-                                 VerticalOptions="Center" HeightRequest="3" BackgroundColor="DarkGray"></BoxView>
-                    </Grid>
-                </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+                       HorizontalTextAlignment="Center" TextChanged="StudentPageSearchBar_TextChanged">
+                
+            </SearchBar>
+            <ListView x:Name="studentList" ItemsSource="{Binding StudentsView}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <ViewCell>
+                            <!--<Grid Padding="10" Margin="10">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="1*"></RowDefinition>
+                                    <RowDefinition Height="1*"></RowDefinition>
+                                    <RowDefinition Height="1*"></RowDefinition>
+                                    <RowDefinition Height="1*"></RowDefinition>
+                                </Grid.RowDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                                </Grid.ColumnDefinitions>
+                                <Label Text="{Binding Forename}" FontSize="16" Grid.Row="0" Grid.ColumnSpan="2"></Label>
+                                <Label Text="{Binding CurrentGradeNumber}" Grid.Row="1" Grid.ColumnSpan="2"></Label>
+                                <Label Text="{Binding SwimEnglandNumber}" Grid.Row="2" Grid.ColumnSpan="2"></Label>
+
+                                <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="4" 
+                                     VerticalOptions="Center" HeightRequest="3" BackgroundColor="DarkGray"></BoxView>
+                            </Grid>-->
+                            <Label Text="{Binding Forename}"/>
+                        </ViewCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+        </ListView>
+
+
+            
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
