--- a/Swimclub.Mobile/Swimclub.Mobile/Views/LoginPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/LoginPage.xaml
@@ -1,18 +1,31 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:d="http://xamarin.com/schemas/2014/forms/design"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             mc:Ignorable="d"
-             x:Class="Swimclub.Mobile.Views.LoginPage"
-             Shell.NavBarIsVisible="False">
+             x:Class="Swimclub.Mobile.Views.LoginPage">
     <ContentPage.Content>
-        <StackLayout Padding="10,0,10,0" VerticalOptions="Center">
-            <!--<Entry x:Name="UsernameInput" ClearButtonVisibility="WhileEditing" Placeholder="Username" IsTextPredictionEnabled="false" Text=""/> Dont know why this one doesnt work but...-->
-            <Entry x:Name="UsernameInput" ClearButtonVisibility="WhileEditing" Placeholder="Username" IsTextPredictionEnabled="false" Text=""/>
-            <Entry x:Name="PasswordInput" ClearButtonVisibility="WhileEditing" Placeholder="Password" IsPassword="true" IsTextPredictionEnabled="false" Text=""/>
-            <Button x:Name="LoginButton"  VerticalOptions="Center" Text="Login" Clicked="LoginButton_Clicked" Command="{Binding LoginCommand}"/> <!--Bindings never used here, not sure if i should remove it thou so left it in for now-->
-            <Button x:Name="passwordForgoten" VerticalOptions="Center" Clicked="passwordForgoten_Clicked" Text="Forgot Password?" />
+        <StackLayout>
+            <Label Text="Welcome to Xamarin.Forms!"
+                VerticalOptions="CenterAndExpand" 
+                HorizontalOptions="CenterAndExpand" />
         </StackLayout>
     </ContentPage.Content>
+
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="0.2*"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="0.4*"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
+        <Label Text="Username:" Grid.Column="0" Grid.Row="0" VerticalOptions="End" HorizontalOptions="Start" Margin="0,0,0,20" TextColor="Black"/>
+        <Label Text="Password:" Grid.Column="0" Grid.Row="1" VerticalOptions="Start" HorizontalOptions="Start" Margin="0,20,0,0" TextColor="Black"/>
+        <Entry x:Name="usernameEntry" Grid.Column="1" Grid.Row="0" VerticalOptions="End" HorizontalOptions="Fill" Margin="0,0,0,20" TextColor="Black"/>
+        <Entry x:Name="passwordEntry" IsPassword="True" Grid.Column="1" Grid.Row="1" VerticalOptions="Start" HorizontalOptions="Fill" Margin="0,20,0,0" TextColor="Black"/>
+        <Button Text="Login" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Center" Clicked="Button_Clicked"></Button>
+    </Grid>
+    
 </ContentPage>
