--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
@@ -8,7 +8,7 @@
                        HorizontalTextAlignment="Center" TextChanged="StudentPageSearchBar_TextChanged">
                 
             </SearchBar>
-            <ListView x:Name="studentList" ItemsSource="{Binding StudentsView}">
+            <ListView x:Name="studentList" ItemsSource="{Binding StudentsView}" HasUnevenRows="True">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
@@ -30,7 +30,10 @@
                                 <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="4" 
                                      VerticalOptions="Center" HeightRequest="3" BackgroundColor="DarkGray"></BoxView>
                             </Grid>-->
-                            <Label Text="{Binding Forename}"/>
+                            <!--<Label Text="{Binding Forename}"/>-->
+                            
+                            
+                            
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
