--- a/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/AppShell.xaml
@@ -82,13 +82,13 @@
     <FlyoutItem Title="About" Icon="icon_about.png">
         <ShellContent Route="AboutPage" ContentTemplate="{DataTemplate local:AboutPage}" />
     </FlyoutItem>
-    <FlyoutItem Title="Browse" Icon="icon_feed.png">
+    <!--<FlyoutItem Title="Browse" Icon="icon_feed.png">
         <ShellContent Route="ItemsPage" ContentTemplate="{DataTemplate local:ItemsPage}" />
-    </FlyoutItem>
+    </FlyoutItem>-->
     <!--Kept the above two menu items ^^^ Although, only the below ones matter. vvv-->
-    <FlyoutItem Title="Main" Icon="icon_feed.png">
+    <!--<FlyoutItem Title="Main" Icon="icon_feed.png">
         <ShellContent Route="MainPage" ContentTemplate="{DataTemplate local:MainPage}" />
-    </FlyoutItem>
+    </FlyoutItem>-->
     <FlyoutItem Title="Swim Classes" Icon="icon_feed.png">
         <ShellContent Route="SwimClassesPage" ContentTemplate="{DataTemplate local:SwimClassesPage}" />
     </FlyoutItem>
