--- a/Swimclub.Mobile/Swimclub.Mobile/Views/LoginPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/LoginPage.xaml
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Swimclub.Mobile.Views.LoginPage">
+             x:Class="Swimclub.Mobile.Views.LoginPage"
+             BackgroundColor="{StaticResource Surface}">
     <ContentPage.Content>
         <StackLayout>
             <Label Text="Welcome to Xamarin.Forms!"
@@ -10,22 +11,37 @@
         </StackLayout>
     </ContentPage.Content>
 
-    <Grid Margin="20">
+    <Grid>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="0.2*"/>
         </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="0.4*"/>
-            <ColumnDefinition Width="*"/>
-        </Grid.ColumnDefinitions>
 
-        <Label Text="Username:" Grid.Column="0" Grid.Row="0" VerticalOptions="End" HorizontalOptions="Start" Margin="0,0,0,20" TextColor="Black"/>
-        <Label Text="Password:" Grid.Column="0" Grid.Row="1" VerticalOptions="Start" HorizontalOptions="Start" Margin="0,20,0,0" TextColor="Black"/>
-        <Entry x:Name="usernameEntry" Grid.Column="1" Grid.Row="0" VerticalOptions="End" HorizontalOptions="Fill" Margin="0,0,0,20" TextColor="Black"/>
-        <Entry x:Name="passwordEntry" IsPassword="True" Grid.Column="1" Grid.Row="1" VerticalOptions="Start" HorizontalOptions="Fill" Margin="0,20,0,0" TextColor="Black"/>
-        <Button Text="Login" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="2" HorizontalOptions="Center" VerticalOptions="Center" Clicked="Button_Clicked"></Button>
+        <StackLayout Grid.Row="0" BackgroundColor="{StaticResource PrimaryLight}" VerticalOptions="FillAndExpand" HorizontalOptions="Fill">
+            <Label Style="{StaticResource PrimLabel}" FontSize="40" Text="Login" Margin="5,20,0,20"/>
+        </StackLayout>
+
+        <Grid Grid.Row="1" Margin="20">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="0.2*"/>
+                <RowDefinition Height="0.2*"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="0.4*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Label Text="Username:" Grid.Column="0" Grid.Row="0" VerticalOptions="End" HorizontalOptions="Start" Margin="0,0,0,20" TextColor="Black"/>
+            <Label Text="Password:" Grid.Column="0" Grid.Row="1" VerticalOptions="Start" HorizontalOptions="Start" Margin="0,20,0,0" TextColor="Black"/>
+            <Entry x:Name="usernameEntry" Grid.Column="1" Grid.Row="0" VerticalOptions="End" HorizontalOptions="Fill" Margin="0,0,0,20" TextColor="Black"/>
+            <Entry x:Name="passwordEntry" IsPassword="True" Grid.Column="1" Grid.Row="1" VerticalOptions="Start" HorizontalOptions="Fill" Margin="0,20,0,0" TextColor="Black"/>
+            <ActivityIndicator x:Name="activityIndicator" IsRunning="False" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"></ActivityIndicator>
+            <Button Text="Login" Grid.Column="0" Grid.ColumnSpan="2" Grid.Row="3" HorizontalOptions="Center" VerticalOptions="Center" Clicked="Button_Clicked"></Button>
+        </Grid>
     </Grid>
+    
+    
     
 </ContentPage>
