--- a/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
+++ b/Swimclub.Mobile/Swimclub.Mobile/Views/StudentsPage.xaml
@@ -8,32 +8,36 @@
                        HorizontalTextAlignment="Center" TextChanged="StudentPageSearchBar_TextChanged">
                 
             </SearchBar>
-            <ListView x:Name="studentList" ItemsSource="{Binding StudentsView}" HasUnevenRows="True">
+            <ListView x:Name="studentList" ItemsSource="{Binding StudentsView}" HasUnevenRows="True" IsPullToRefreshEnabled="True" Refreshing="studentList_Refreshing" ItemTapped="studentList_ItemTapped" ItemSelected="studentList_ItemSelected">
                 <ListView.ItemTemplate>
                     <DataTemplate>
                         <ViewCell>
-                            <!--<Grid Padding="10" Margin="10">
+                            <Grid>
                                 <Grid.RowDefinitions>
-                                    <RowDefinition Height="1*"></RowDefinition>
-                                    <RowDefinition Height="1*"></RowDefinition>
-                                    <RowDefinition Height="1*"></RowDefinition>
-                                    <RowDefinition Height="1*"></RowDefinition>
+                                    <RowDefinition Height="*" />
+                                    <RowDefinition Height="*" />
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="1*"></ColumnDefinition>
-                                    <ColumnDefinition Width="1*"></ColumnDefinition>
+                                    <ColumnDefinition Width="*"/>
+                                    <ColumnDefinition Width="*"/>
                                 </Grid.ColumnDefinitions>
-                                <Label Text="{Binding Forename}" FontSize="16" Grid.Row="0" Grid.ColumnSpan="2"></Label>
-                                <Label Text="{Binding CurrentGradeNumber}" Grid.Row="1" Grid.ColumnSpan="2"></Label>
-                                <Label Text="{Binding SwimEnglandNumber}" Grid.Row="2" Grid.ColumnSpan="2"></Label>
 
-                                <BoxView Grid.Row="3" HorizontalOptions="FillAndExpand" Grid.ColumnSpan="4" 
-                                     VerticalOptions="Center" HeightRequest="3" BackgroundColor="DarkGray"></BoxView>
-                            </Grid>-->
-                            <!--<Label Text="{Binding Forename}"/>-->
-                            
-                            
-                            
+                                <Label FontSize="30" Grid.Row="0" Grid.ColumnSpan="2" TextColor="{Binding textColour}">
+                                    <Label.FormattedText>
+                                        <FormattedString>
+                                            <FormattedString.Spans>
+                                                <Span Text="{Binding Forename}"/>
+                                                <Span Text=" "/>
+                                                <Span Text="{Binding Surname}"/>
+                                            </FormattedString.Spans>
+                                        </FormattedString>
+                                    </Label.FormattedText>
+                                </Label>
+
+                                <Label Text="Swim England Number" Grid.Row="1" Grid.Column="0" TextColor="{Binding textColour}"/>
+                                <Label Text="{Binding SwimEnglandNumber}" Grid.Row="1" Grid.Column="1" TextColor="{Binding textColour}"/>
+
+                            </Grid>
                         </ViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
